[package]
name = "libark"
version = "0.1.0"
authors = ["Jack Malcom <jackxmalcom@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.13"
rust-crypto = "0.2.36"
num-bigint = "0.3.0"
num-traits = "0.2.12"